# opencv_helloworld

./: CMakeLists.txt  main.cpp
lesson1/: CMakeLists.txt  main.cpp
lesson2/: CMakeLists.txt  main.cpp
